# wrapdb

./: .editorconfig  .gitattributes  .gitignore  LICENSE.build  README.md  ci_config.json  config.h.meson  libxml++config.h.meson  meson.build  meson.format  meson_options.txt  readme.txt  releases.json  upstream.wrap
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new-wrap.md
.github/workflows/: autoupdate.yml  build_all.yml  format-meson.yml  github_greeting.yml  lint.yml  release.yml  sanity_checks.yml
UnitTest++/: meson.build
UnitTest++/Posix/: meson.build
UnitTest++/Win32/: meson.build
config/: meson.build
crypto/test/: meson.build
examples/: meson.build
frontend/: meson.build
googletest/: meson.build
include/: lame.h  meson.build
include-workaround-meson/librdkafka/: meson.build
include/libxml/: meson.build
include/mt32emu/: meson.build
include/ogg/: meson.build
internal/: config.h.meson
lib/: meson.build
libmp3lame/: meson.build
libraries/: meson.build
libraries/EEPROM/: meson.build
libraries/SPI/: meson.build
libtiff/: tif_config.h.meson  tiffconf.h.meson
libxml++/: meson.build
nginx/: default
private/: meson.build
private_native/: meson.build
quazip/: meson.build
sample/: meson.build
source/: meson.build
source/i18n/: meson.build
source/stubdata/: meson.build
source/tools/: meson.build
source/tools/icuinfo/: meson.build
source/tools/icupkg/: meson.build
src/: meson.build
src/SFML/Audio/: meson.build
src/SFML/Network/: meson.build
src/SFML/System/: meson.build
src/SFML/Window/: meson.build
src/atomic/: meson.build
src/audio/disk/: meson.build
src/audio/wasapi/: meson.build
src/audio/winmm/: meson.build
src/ciphers/aes/: meson.build
src/core/: meson.build
src/core/linux/: meson.build
src/core/unix/: meson.build
src/cpuinfo/: meson.build
src/dynapi/: meson.build
src/encauth/: meson.build
src/encauth/ccm/: meson.build
src/encauth/ocb/: meson.build
src/file/cocoa/: meson.build
src/filesystem/: meson.build
src/haptic/: meson.build
src/hashes/sha2/: meson.build
src/hashes/whirl/: meson.build
src/hidapi/linux/: meson.build
src/joystick/: meson.build
src/joystick/steam/: meson.build
src/joystick/windows/: meson.build
src/libFLAC/: meson.build
src/liblzma/: meson.build
src/loadso/: meson.build
src/loadso/windows/: meson.build
src/mac/f9/: meson.build
src/mac/pelican/: meson.build
src/math/: meson.build
src/math/fp/: meson.build
src/misc/: meson.build
src/misc/base64/: meson.build
src/misc/crypt/: meson.build
src/modes/: meson.build
src/modes/cbc/: meson.build
src/modes/cfb/: meson.build
src/modes/ecb/: meson.build
src/modes/f8/: meson.build
src/modes/ofb/: meson.build
src/modes/xts/: meson.build
src/pk/: meson.build
src/pk/asn1/der/: meson.build
src/pk/dsa/: meson.build
src/pk/katja/: meson.build
src/pk/rsa/: meson.build
src/power/: meson.build
src/prngs/: meson.build
src/render/opengl/: meson.build
src/render/opengles/: meson.build
src/thread/windows/: meson.build
src/timer/: meson.build
src/timer/unix/: meson.build
src/video/: meson.build
src/video/cocoa/: meson.build
src/video/windows/: meson.build
src/xz/: meson.build
srtp2/: meson.build
subprojects/: .gitignore  GD32F4xx_SPL.wrap  abseil-cpp.wrap  adamyaxley-obfuscate.wrap  aklomp-base64.wrap  apache-orc.wrap  apr.wrap  arduinocore-avr.wrap  argparse.wrap  argtable3.wrap  argu-parser.wrap  argus.wrap  arrow-cpp.wrap  asio.wrap  atomic_queue.wrap  au.wrap  avro-cpp.wrap  aws-c-cal.wrap  aws-c-common.wrap  aws-c-compression.wrap  aws-c-sdkutils.wrap  aws-lc.wrap  azure-sdk-for-cpp.wrap  backward-cpp.wrap  base64.wrap  bdwgc.wrap  bgfx.wrap  blueprint-compiler.wrap  boost-mp11.wrap  boost-pfr.wrap  boost_di.wrap  box2d.wrap  bshoshany-thread-pool.wrap  bzip2.wrap  c-ares.wrap  c-flags.wrap  cairo.wrap  cairomm.wrap  canfigger.wrap  catch.wrap  (+435 more)
subprojects/packagefiles/: meson.build
subprojects/packagefiles/CSFML/: meson.build  meson_options.txt
subprojects/packagefiles/CSFML/include/CSFML/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/Audio/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/Graphics/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/Main/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/Network/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/System/: meson.build
subprojects/packagefiles/CSFML/src/CSFML/Window/: meson.build
subprojects/packagefiles/abseil-cpp/: meson.build  meson_options.txt
subprojects/packagefiles/adamyaxley-obfuscate/: meson.build  meson_options.txt
subprojects/packagefiles/aklomp-base64/: meson.build  meson_options.txt
subprojects/packagefiles/apr/: meson.build
subprojects/packagefiles/apr/data/: meson.build
subprojects/packagefiles/apr/include/: meson.build
subprojects/packagefiles/apr/include/arch/unix/: apr_private.h  meson.build
subprojects/packagefiles/arduinocore-avr/: meson.build
subprojects/packagefiles/arduinocore-avr/libraries/EEPROM/: meson.build
subprojects/packagefiles/arduinocore-avr/libraries/HID/: meson.build
subprojects/packagefiles/arduinocore-avr/libraries/SPI/: meson.build
subprojects/packagefiles/arduinocore-avr/libraries/SoftwareSerial/: meson.build
subprojects/packagefiles/arduinocore-avr/libraries/Wire/: meson.build
subprojects/packagefiles/argparse/: meson.build
subprojects/packagefiles/argtable3/: argtable3.def  meson.build  meson_options.txt
subprojects/packagefiles/arrow-cpp/: meson.build  meson.options
subprojects/packagefiles/asio/: meson.build
subprojects/packagefiles/au/: meson.build
subprojects/packagefiles/avro-cpp/: fix_datafile_32bit.diff  meson.build  (+2 more)
test/: meson.build
test/encoder/: meson.build
tests/: meson.build
tools/: create_release.py  fake_tty.py  filter_matrix.py  format.py  import-wraps.py  internalize_sources.py  run_meson_fmt.py  sanity_checks.py  update-packagefiles.py  utils.py  versions.py
vq/: meson.build
(+1591 files in other folders)
