# Copyright © 2018 Dylan Baker
# Copyright © 2018 Intel Corporation

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

option(
  'use_libbsd',
  type : 'feature',
  value : 'disabled',
  description : 'Use libbsd for arc4random_buf',
)
option(
  'xml_dtd',
  type : 'boolean',
  value : true,
  description : 'If true make parameter entity parsing functionality available',
)
option(
  'xml_ns',
  type : 'boolean',
  value : true,
  description : 'If true make XML Namespaces functionality available',
)
option(
  'use_dev_urandom',
  type : 'boolean',
  value : true,
  description : 'If true use /dev/urandom for entropy. Has no affect on platforms without /dev/urandom',
)
option(
  'build_tests',
  type : 'boolean',
  value : false,
  description : 'Build unit tests',
)
# TODO: tools, examples, tests, docs
