option('cli', type: 'boolean', value: true, description: 'Build the CLI')
option('inline-all', type: 'boolean', value: false,
    description: 'Make all functions inline')
option('namespace', type: 'string', value: '',
    description: 'Prefixes all symbols with the value of XXH_NAMESPACE')
option('force-memory-access', type: 'combo', choices: ['default', 'attribute', 'unaligned-reads', 'byteshift'],
    value: 'default', description: 'See XXH_FORCE_MEMORY_ACCESS')
option('force-align-check', type: 'boolean', value: false,
    description: 'Use a faster direct read path when input is aligned')
option('vector', type: 'combo', choices: ['default', 'scalar', 'sse2', 'avx2', 'avx512', 'neon', 'vsx'],
    value: 'default', description: 'Manually select a vector instruction set')
option('prefetch', type: 'boolean', value: true,
    description: 'Disable prefetching. XXH3 only')
option('prefetch-dist', type: 'integer', value: 0,
    description: 'Select prefetching distance. XXH3 only')
option('inline-hints', type: 'boolean', value: true,
    description: 'See XXH_NO_INLINE_HINTS')
option('reroll', type: 'boolean', value: false,
    description: 'Reduces the size of the generated code by not unrolling some loops')
option('accept-null-input-pointer', type: 'boolean', value: false,
    description: 'Prevent dereferencing of a NULL pointer')
option('long-long', type: 'boolean', value: true,
    description: 'Include compilation of algorithms relying on 64-bit types')
option('cpu-little-endian', type: 'feature', value: 'auto',
    description: 'Force endianness')
option('dispatch', type: 'boolean', value: false,
    description: 'See DISPATCH=1 for information about xxh_x86dispatch.c')
