option('WITHOUT_OPTIMIZATION', type : 'boolean', value : false, description : 'Disable optimization')
option('ENABLE_DEVEL', type : 'boolean', value : false, description : 'Enable development asserts, checks, etc')
option('ENABLE_REFCNT_DEBUG', type : 'boolean', value : false, description : 'Enable refcnt debugging')
option('ENABLE_SHAREDPTR_DEBUG', type : 'boolean', value : false, description : 'Enable sharedptr debugging')
option('WITH_LIBDL', type : 'feature', value : 'enabled', description : 'With libdl')
option('WITH_ZLIB', type : 'feature', value : 'enabled', description : 'With ZLIB')
option('WITH_ZSTD', type : 'feature', value : 'enabled', description : 'With ZSTD')
option('WITH_SSL', type : 'feature', value : 'enabled', description : 'With SSL')
option('WITH_SASL', type : 'feature', value : 'enabled', description : 'With SASL')
option('ENABLE_LZ4_EXT', type : 'feature', value : 'enabled', description : 'Enable external LZ4 library support')
