latticebuild = executable('latticebuild',
  'latticebuild.c',
  'vqgen.c',
  'bookutil.c',
  dependencies : vorbis_dep,
)

latticetune = executable('latticetune',
  'latticetune.c',
  'vqgen.c',
  'bookutil.c',
  dependencies : vorbis_dep,
)

huffbuild = executable('huffbuild',
  'huffbuild.c',
  'vqgen.c',
  'bookutil.c',
  dependencies : vorbis_dep,
)
