audio_sources = files(
    'ALCheck.cpp',
    'AlResource.cpp',
    'AudioDevice.cpp',
    'Listener.cpp',
    'Music.cpp',
    'Sound.cpp',
    'SoundBuffer.cpp',
    'SoundBufferRecorder.cpp',
    'InputSoundFile.cpp',
    'OutputSoundFile.cpp',
    'SoundRecorder.cpp',
    'SoundSource.cpp',
    'SoundStream.cpp',

    'SoundFileFactory.cpp',
    'SoundFileReaderFlac.cpp',
    'SoundFileReaderOgg.cpp',
    'SoundFileReaderWav.cpp',
    'SoundFileWriterFlac.cpp',
    'SoundFileWriterOgg.cpp',
    'SoundFileWriterWav.cpp',
)

audio_lib = library('sfml-audio',
    audio_sources,
    cpp_args: get_option('default_library') == 'shared' ? ['-DSFML_AUDIO_EXPORTS'] : ['-DSFML_STATIC'],
    link_with: [system_lib],
    include_directories: [pub_inc, priv_inc],
    dependencies: [openal_dep,
                   flac_dep,
                   vorbis_dep,
                   vorbisenc_dep,
                   vorbisfile_dep,
                   ogg_dep])
