all_sources += files(
  'crypt.c',
  'crypt_argchk.c',
  'crypt_cipher_descriptor.c',
  'crypt_cipher_is_valid.c',
  'crypt_find_cipher.c',
  'crypt_find_cipher_any.c',
  'crypt_find_cipher_id.c',
  'crypt_find_hash.c',
  'crypt_find_hash_any.c',
  'crypt_find_hash_id.c',
  'crypt_find_hash_oid.c',
  'crypt_find_prng.c',
  'crypt_fsa.c',
  'crypt_hash_descriptor.c',
  'crypt_hash_is_valid.c',
  'crypt_ltc_mp_descriptor.c',
  'crypt_prng_descriptor.c',
  'crypt_prng_is_valid.c',
  'crypt_register_cipher.c',
  'crypt_register_hash.c',
  'crypt_register_prng.c',
  'crypt_unregister_cipher.c',
  'crypt_unregister_hash.c',
  'crypt_unregister_prng.c',
)
